--- a/src/components/textfield/demoBasicUsage/index.html
+++ b/src/components/textfield/demoBasicUsage/index.html
@@ -1,1 +1,1 @@
-<uif-textfield description="This is the description" placeholder="This is the placeholder" ng-model="value" />
+<uif-textfield description="This is the description" label="This is the label" ng-model="value" />
