--- a/src/components/searchbox/demo/index.html
+++ b/src/components/searchbox/demo/index.html
@@ -21,37 +21,30 @@
     <em>In order for this demo to work you must first build the library in debug mode.</em>
 
     <p>
-        Use the attribute <code>uif-type</code> to specify the icon to display. This must be one of the icons listed on the page: <a href="http://dev.office.com/fabric/styles">Office UI Fabric - Sytles - Icons</a>.
+        Use the attributes <code>uif-value</code> to specify the value of the search field. 
+    </p>
+    <p>
+        Use the attributes <code>uif-value</code> to specify the value of the search field.
     </p>
 
     <p>
         This markup: <br />
         <code>
-            &lt;uif-search uif-value="'Searchbox'" /&gt;
+            &lt;uif-searchbox uif-value="'Searchtext'" uif-search="'Placeholder'" /&gt;
         </code>
     </p>
 
     <p>
         Renders this:
         <br />
-       <uif-searchbox uif-value="" uif-search="'Placeholder'" />
+        <uif-searchbox uif-value="'Searchtext'" uif-search="'Placeholder'" />
     </p>
 
-    <h2>Modifiers</h2>
-    <p>
-        Change the size &amp; color using standard CSS sizing techniques: <code>style="font-size:32px; color:red;"</code>:<br />
-        <uif-icon uif-type="arrowDownLeft" style="font-size:32px; color:red;" />
-    </p>
-
-    <h2>Changing the Icon</h2>
     <div ng-controller="demoController">
-        <select ng-model="selectedIcon"
-                ng-options="icon.name for icon in icons track by icon.id"></select>
-
-        <div>
-            Selected icon = <code>{{selectedIcon}}</code><br />
-            Rendered icon = <uif-icon uif-type="{{selectedIcon.id}}" />
-        </div>
+        <p>
+            Example using a controller
+        </p>
+        <uif-searchbox uif-value="value" uif-search="placeholder"></uif-searchbox>
     </div>
 
 </body>
