Final touches to Searchbox directive

--- a/src/components/searchbox/demo/index.html
+++ b/src/components/searchbox/demo/index.html
@@ -17,7 +17,7 @@
 
 <body ng-app="demoApp">
 
-    <h1 class="ms-font-su">Icon Demo | &lt;uif-icon&gt;</h1>
+    <h1 class="ms-font-su">Searchbox Demo | &lt;uif-searchbox&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
 
     <p>
