cleanup textfield demo (removing icon stuff)

--- a/src/components/textfield/demo/index.html
+++ b/src/components/textfield/demo/index.html
@@ -15,7 +15,7 @@
   <script src="index.js"></script>
 </head>
 
-<body ng-controller="demoController">
+<body>
 
   <h1 class="ms-font-su">Textfield Demo | &lt;uif-textfield&gt;</h1> 
   <em>In order for this demo to work you must first build the library in debug mode.</em>
