--- a/src/components/spinner/demo/index.html
+++ b/src/components/spinner/demo/index.html
@@ -5,8 +5,11 @@
   <title>ngOfficeUiFabric | uif-Spinner demo</title>
   <meta charset="utf-8">
   <!-- office ui fabric css -->
-  <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.min.css" />
-  <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.components.min.css" />
+  <!-- Fabric 1.2.0 min.css -->
+  <link rel="stylesheet" href="https://onedrive.live.com/download.aspx?cid=33BC083C1B4F219C&resid=33bc083c1b4f219c%212031&authkey=%21AI9ba8WXJDCkxaI&canary=" />
+
+  <!-- Fabric 1.2.0 components.min.css -->
+  <link rel="stylesheet" href="https://onedrive.live.com/download.aspx?cid=33BC083C1B4F219C&resid=33bc083c1b4f219c%212033&authkey=%21AI9ba8WXJDCkxaI&canary=" />
   <!-- angular library -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <!-- ngofficeuifabric library -->
