setup for 0.1.3 release
Update readme.md for release details & package distro badges; updated package.json with contributor list & version; updated demos to use local NPM acquired copies of Angular 1.4.8 & Office UI Fabric 1.2.

--- a/src/components/spinner/demo/index.html
+++ b/src/components/spinner/demo/index.html
@@ -4,14 +4,12 @@
 <head>
   <title>ngOfficeUiFabric | uif-Spinner demo</title>
   <meta charset="utf-8">
-  <!-- office ui fabric css -->
-  <!-- Fabric 1.2.0 min.css -->
-  <link rel="stylesheet" href="https://onedrive.live.com/download.aspx?cid=33BC083C1B4F219C&resid=33bc083c1b4f219c%212031&authkey=%21AI9ba8WXJDCkxaI&canary=" />
 
-  <!-- Fabric 1.2.0 components.min.css -->
-  <link rel="stylesheet" href="https://onedrive.live.com/download.aspx?cid=33BC083C1B4F219C&resid=33bc083c1b4f219c%212033&authkey=%21AI9ba8WXJDCkxaI&canary=" />
+  <!-- office ui fabric css -->
+  <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
+  <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
   <!-- angular library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="../../../../node_modules/angular/angular.min.js"></script>
   <!-- ngofficeuifabric library -->
   <script src="../../../../dist/ngOfficeUiFabric.js"></script>
   <script src="index.js"></script>
