--- a/src/components/contextualmenu/demo/index.html
+++ b/src/components/contextualmenu/demo/index.html
@@ -6,14 +6,15 @@
     <meta charset="utf-8" />
 
     <!-- office ui fabric css -->
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.min.css" />
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.components.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
+    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
     <!-- angular library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="https://code.angularjs.org/1.4.8/angular-animate.min.js"></script>
+    <script src="../../../../node_modules/angular/angular.min.js"></script>
+    <script src="../../../../node_modules/angular-animate/angular-animate.min.js"></script>
     <!-- ngofficeuifabric library -->
     <script src="../../../../dist/ngOfficeUIFabric.js"></script>
+
+    <link rel="stylesheet" href="styles.css" />
     <script src="index.js"></script>
 </head>
 
