updated directives to meet directive guideline 006
Update textfield & toggle directive attributes to conform to directive guideline 006

closes issue #73
merges pr #80

--- a/src/components/toggle/demoBasicUsage/index.html
+++ b/src/components/toggle/demoBasicUsage/index.html
@@ -1,5 +1,5 @@
 <html ng-app="demoApp" ng-controller="demoController">
-<uif-toggle label-off="Label off" label-on="Label on" ng-model="toggled" />
+<uif-toggle uif-label-off="Label off" uif-label-on="Label on" ng-model="toggled" />
 </html>
 
 <script type="text/javascript">
