--- a/src/components/textfield/demoPlaceholder/index.html
+++ b/src/components/textfield/demoPlaceholder/index.html
@@ -1,1 +1,1 @@
-<uif-textfield description="This is the description" placeholder="This is the placeholder"  />
+<uif-textfield uif-description="This is the description" placeholder="This is the placeholder"  />
