--- a/src/components/textfield/demoUnderlined/index.html
+++ b/src/components/textfield/demoUnderlined/index.html
@@ -1,1 +1,1 @@
-<uif-textfield description="This is the description" label="This is the label" underlined />
+<uif-textfield uif-description="This is the description" uif-label="This is the label" uif-underlined />
