Dropdown ready for PR.

--- a/src/components/dropdown/demo/index.html
+++ b/src/components/dropdown/demo/index.html
@@ -17,32 +17,65 @@
 
 <body>
 
-  <h1 class="ms-font-su">Dropdown Demo | &lt;uif-dropdown&gt;</h1> 
-  <em>In order for this demo to work you must first build the library in debug mode.</em>
+    <h1 class="ms-font-su">Dropdown Demo | &lt;uif-dropdown&gt;</h1> 
+    <em>In order for this demo to work you must first build the library in debug mode.</em>
 
-  <h2>Basic usage</h2>
-  <p>
-    This markup: <br />
-    <code>
-      
-    </code>
-  </p>
+    <h2>Basic usage</h2>
+    <p>
+        This markup: <br />
+        <pre>
+        &lt;uif-dropdown ng-model=&quot;dropdownValue&quot; &gt;
+            &lt;uif-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-option&gt;
+        &lt;/uif-dropdown&gt;
+        </pre>
+    </p>
 
-  <p>
-    Renders this:
-    <br />
-    <uif-dropdown ng-model="dropdownValue">
-      <uif-option value="value1">Value 1</uif-option>
-      <uif-option value="value2">Value 2</uif-option>
-      <uif-option value="value3">Value 3</uif-option>
-      <uif-option value="value4">Value 4</uif-option>
-    <uif-dropdown>
+    <p>
+        Renders this:
+        <br />
+        <uif-dropdown ng-model="dropdownValue">
+            <uif-option value="value1">Value 1</uif-option>
+            <uif-option value="value2">Value 2</uif-option>
+            <uif-option value="value3">Value 3</uif-option>
+            <uif-option value="value4">Value 4</uif-option>
+        </uif-dropdown>
 
-  </p>
-  <p>
-    <span>dropdownValue: {{dropdownValue}}</span>
-  </p>
+    </p>
+    <p>
+        <span>dropdownValue: {{dropdownValue}}</span>
+    </p>
+  
+  
+    <h2>Disabled usage</h2>
+    <p>
+        This markup: <br />
+        <pre>
+         &lt;uif-dropdown ng-model=&quot;dropdownValue&quot; disabled&gt;
+            &lt;uif-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-option&gt;
+            &lt;uif-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-option&gt;
+        &lt;/uif-dropdown&gt;
+        </pre>
+    </p>
 
+    <p>
+        Renders this:
+        <br />
+        <uif-dropdown ng-model="dropdownValue" disabled>
+            <uif-option value="value1">Value 1</uif-option>
+            <uif-option value="value2">Value 2</uif-option>
+            <uif-option value="value3">Value 3</uif-option>
+            <uif-option value="value4">Value 4</uif-option>
+        </uif-dropdown>
+
+    </p>
+    <p>
+        <span>dropdownValue: {{dropdownValue}}</span>
+    </p>
 </body>
 
 </html>
