--- a/src/components/searchbox/demo/index.html
+++ b/src/components/searchbox/demo/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
 
     <!-- office ui fabric css -->
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.min.css" />
-    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.0/fabric.components.min.css" />
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.min.css" />
+    <link rel="stylesheet" href="https://appsforoffice.microsoft.com/fabric/1.1.3/fabric.components.min.css" />
     <!-- angular library -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <!-- ngofficeuifabric library -->
@@ -44,7 +44,7 @@
         <p>
             Example using a controller
         </p>
-        <uif-searchbox uif-value="value" placeholder="placeholder"></uif-searchbox>
+        <uif-searchbox value="value" placeholder="placeholder"></uif-searchbox>
     </div>
 
 </body>
