--- a/src/components/icon/demoTypeScriptUsage/index.html
+++ b/src/components/icon/demoTypeScriptUsage/index.html
@@ -12,7 +12,7 @@
   <script src="../../../../node_modules/angular/angular.min.js"></script>
   <!-- ngofficeuifabric library -->
   <script src="../../../../dist/ngOfficeUIFabric.js"></script>
-  <script src="index.js"></script>
+  <script src="bundle.js"></script>
 </head>
 
 <body ng-app="demoApp">
