overlay - Implementation of mode enum (light and dark) with console error logging.  Not sure if approach passing logService is ideal.

--- a/src/components/overlay/demo/index.html
+++ b/src/components/overlay/demo/index.html
@@ -43,6 +43,7 @@
                         <select ng-model="vm.overlayMode">
                             <option>light</option>
                             <option>dark</option>
+                            <option>invalid</option>
                         </select>
                     </div>
                 </div>
