--- a/src/components/callout/demo/index.html
+++ b/src/components/callout/demo/index.html
@@ -116,36 +116,36 @@
       Separator can be rendered between content and actions containers. <em>uif-actiontext</em> and <em>uif-separator</em> server the same purpose.
       <br/>
       <pre>
-  &lt;uif-callout uif-actiontext&gt;
+  &lt;uif-callout uif-action-text&gt;
     &lt;uif-callout-header&gt;All of your favorite people&lt;/uif-callout-header&gt;
     &lt;uif-callout-content&gt;People automatically puts together all of the people you care most about in one place.&lt;/uif-callout-header&gt;
     &lt;uif-callout-actions&gt;
-    &lt;button class=&quot;ms-Button ms-Button--command&quot;&gt;
-    &lt;span class=&quot;ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--check&quot;&gt;&lt;/i&gt;&lt;/span&gt;
-    &lt;span class=&quot;ms-Button-label&quot;&gt;Save&lt;/span&gt;
-    &lt;/button&gt;
-    &lt;button class=&quot; ms-Button ms-Button--command&quot;&gt;
-    &lt;span class=&quot;ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--x&quot;&gt;&lt;/i&gt;&lt;/span&gt;
-    &lt;span class=&quot; ms-Button-label&quot;&gt;Cancel&lt;/span&gt;
-    &lt;/button&gt;
+      &lt;button class=&quot;ms-Callout-action ms-Button ms-Button--command&quot;&gt;
+        &lt;span class=&quot;ms-Callout-actionText ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--check&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+        &lt;span class=&quot;ms-Button-label&quot;&gt;Save&lt;/span&gt;
+      &lt;/button&gt;
+      &lt;button class=&quot;ms-Callout-action ms-Button ms-Button--command&quot;&gt;
+        &lt;span class=&quot;ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--x&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+        &lt;span class=&quot;ms-Callout-actionText ms-Button-label&quot;&gt;Cancel&lt;/span&gt;
+      &lt;/button&gt;
     &lt;/uif-callout-actions&gt;
   &lt;/uif-callout&gt;
       </pre>
     </p>
 
     <p>
-      <uif-callout uif-actiontext>
+      <uif-callout uif-action-text>
         <uif-callout-header>All of your favorite people</uif-callout-header>
         <uif-callout-content>People automatically puts together all of the people you care most about in one place.</uif-callout-header>
         <uif-callout-actions>
-        <button class="ms-Button ms-Button--command">
-          <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--check"></i></span>
-          <span class="ms-Button-label">Save</span>
-        </button>
-        <button class=" ms-Button ms-Button--command">
-          <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--x"></i></span>
-          <span class=" ms-Button-label">Cancel</span>
-        </button>
+          <button class="ms-Callout-action ms-Button ms-Button--command">
+            <span class="ms-Callout-actionText ms-Button-icon"><i class="ms-Icon ms-Icon--check"></i></span>
+            <span class="ms-Button-label">Save</span>
+          </button>
+          <button class="ms-Callout-action ms-Button ms-Button--command">
+            <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--x"></i></span>
+            <span class="ms-Callout-actionText ms-Button-label">Cancel</span>
+          </button>
         </uif-callout-actions>
       </uif-callout>
     </p>
