fix(callout): updated CSS when separator used
Adding `ms-Callout-action` class to buttons inside `uif-callout-actions` directive when `uif-action-text` or `uif-separator` used on main `uif-callout` directive. `ms-Callout-actionText` class is also added to `span` elements inside those buttons.

Closes #122. Closes #146.

--- a/src/components/callout/demo/index.html
+++ b/src/components/callout/demo/index.html
@@ -120,13 +120,13 @@
     &lt;uif-callout-header&gt;All of your favorite people&lt;/uif-callout-header&gt;
     &lt;uif-callout-content&gt;People automatically puts together all of the people you care most about in one place.&lt;/uif-callout-header&gt;
     &lt;uif-callout-actions&gt;
-      &lt;button class=&quot;ms-Callout-action ms-Button ms-Button--command&quot;&gt;
-        &lt;span class=&quot;ms-Callout-actionText ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--check&quot;&gt;&lt;/i&gt;&lt;/span&gt;
+      &lt;button class=&quot;ms-Button ms-Button--command&quot;&gt;
+        &lt;span class=&quot;ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--check&quot;&gt;&lt;/i&gt;&lt;/span&gt;
         &lt;span class=&quot;ms-Button-label&quot;&gt;Save&lt;/span&gt;
       &lt;/button&gt;
-      &lt;button class=&quot;ms-Callout-action ms-Button ms-Button--command&quot;&gt;
+      &lt;button class=&quot;ms-Button ms-Button--command&quot;&gt;
         &lt;span class=&quot;ms-Button-icon&quot;&gt;&lt;i class=&quot;ms-Icon ms-Icon--x&quot;&gt;&lt;/i&gt;&lt;/span&gt;
-        &lt;span class=&quot;ms-Callout-actionText ms-Button-label&quot;&gt;Cancel&lt;/span&gt;
+        &lt;span class=&quot;ms-Button-label&quot;&gt;Cancel&lt;/span&gt;
       &lt;/button&gt;
     &lt;/uif-callout-actions&gt;
   &lt;/uif-callout&gt;
@@ -138,13 +138,13 @@
         <uif-callout-header>All of your favorite people</uif-callout-header>
         <uif-callout-content>People automatically puts together all of the people you care most about in one place.</uif-callout-header>
         <uif-callout-actions>
-          <button class="ms-Callout-action ms-Button ms-Button--command">
-            <span class="ms-Callout-actionText ms-Button-icon"><i class="ms-Icon ms-Icon--check"></i></span>
+          <button class="ms-Button ms-Button--command">
+            <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--check"></i></span>
             <span class="ms-Button-label">Save</span>
           </button>
-          <button class="ms-Callout-action ms-Button ms-Button--command">
+          <button class="ms-Button ms-Button--command">
             <span class="ms-Button-icon"><i class="ms-Icon ms-Icon--x"></i></span>
-            <span class="ms-Callout-actionText ms-Button-label">Cancel</span>
+            <span class="ms-Button-label">Cancel</span>
           </button>
         </uif-callout-actions>
       </uif-callout>
