Datepicker updates, tslint issues

--- a/src/components/datepicker/demo/index.html
+++ b/src/components/datepicker/demo/index.html
@@ -10,8 +10,18 @@
   <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
   <!-- angular library -->
   <script src="../../../../node_modules/angular/angular.min.js"></script>
+  
+  <!-- jquery (pickadate depends on jquery) -->
+  <script src="../../../../node_modules/jquery/dist/jquery.min.js"></script>
+  
+  <!-- pickadate library -->
+  <script src="../../../../node_modules/pickadate/lib/compressed/picker.js"></script>
+  <script src="../../../../node_modules/pickadate/lib/compressed/picker.date.js"></script>
+  
   <!-- ngofficeuifabric library -->
   <script src="../../../../dist/ngOfficeUIFabric.js"></script>
+  
+  
   <script src="index.js"></script>
 </head>
 
