BREAKING: Renamed uif-option to uif-dropdown-option

--- a/src/components/dropdown/demo/index.html
+++ b/src/components/dropdown/demo/index.html
@@ -25,10 +25,10 @@
         This markup: <br />
         <pre>
         &lt;uif-dropdown ng-model=&quot;dropdownValue&quot; &gt;
-            &lt;uif-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-option&gt;
+            &lt;uif-dropdown-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-dropdown-option&gt;
         &lt;/uif-dropdown&gt;
         </pre>
     </p>
@@ -37,10 +37,10 @@
         Renders this:
         <br />
         <uif-dropdown ng-model="dropdownValue">
-            <uif-option value="value1">Value 1</uif-option>
-            <uif-option value="value2">Value 2</uif-option>
-            <uif-option value="value3">Value 3</uif-option>
-            <uif-option value="value4">Value 4</uif-option>
+            <uif-dropdown-option value="value1">Value 1</uif-dropdown-option>
+            <uif-dropdown-option value="value2">Value 2</uif-dropdown-option>
+            <uif-dropdown-option value="value3">Value 3</uif-dropdown-option>
+            <uif-dropdown-option value="value4">Value 4</uif-dropdown-option>
         </uif-dropdown>
 
     </p>
@@ -54,10 +54,10 @@
         This markup: <br />
         <pre>
          &lt;uif-dropdown ng-model=&quot;dropdownValue&quot; disabled&gt;
-            &lt;uif-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-option&gt;
-            &lt;uif-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-option&gt;
+            &lt;uif-dropdown-option value=&quot;value1&quot;&gt;Value 1&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value2&quot;&gt;Value 2&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value3&quot;&gt;Value 3&lt;/uif-dropdown-option&gt;
+            &lt;uif-dropdown-option value=&quot;value4&quot;&gt;Value 4&lt;/uif-dropdown-option&gt;
         &lt;/uif-dropdown&gt;
         </pre>
     </p>
@@ -66,10 +66,10 @@
         Renders this:
         <br />
         <uif-dropdown ng-model="dropdownValue" disabled>
-            <uif-option value="value1">Value 1</uif-option>
-            <uif-option value="value2">Value 2</uif-option>
-            <uif-option value="value3">Value 3</uif-option>
-            <uif-option value="value4">Value 4</uif-option>
+            <uif-dropdown-option value="value1">Value 1</uif-dropdown-option>
+            <uif-dropdown-option value="value2">Value 2</uif-dropdown-option>
+            <uif-dropdown-option value="value3">Value 3</uif-dropdown-option>
+            <uif-dropdown-option value="value4">Value 4</uif-dropdown-option>
         </uif-dropdown>
 
     </p>
