--- a/src/components/dropdown/demoBasicUsage/index.html
+++ b/src/components/dropdown/demoBasicUsage/index.html
@@ -1,6 +1,6 @@
 <uif-dropdown ng-model="dropdownValue">
-    <uif-option value="value1">Value 1</uif-option>
-    <uif-option value="value2">Value 2</uif-option>
-    <uif-option value="value3">Value 3</uif-option>
-    <uif-option value="value4">Value 4</uif-option>
+    <uif-dropdown-option value="value1">Value 1</uif-dropdown-option>
+    <uif-dropdown-option value="value2">Value 2</uif-dropdown-option>
+    <uif-dropdown-option value="value3">Value 3</uif-dropdown-option>
+    <uif-dropdown-option value="value4">Value 4</uif-dropdown-option>
 </uif-dropdown>
