docs(icon): switch away from self-closing
Custom directives should not be self-closing or void elements. Docs and samples updated to reflect this. See this for more info: https://github.com/angular/angular.js/issues/1953#issuecomment-13135021

--- a/src/components/icon/demoTypeScriptUsage/index.html
+++ b/src/components/icon/demoTypeScriptUsage/index.html
@@ -45,7 +45,7 @@
     
     <div>
       Selected icon = <code>{{controller.selectedIcon}}</code><br />
-      Rendered icon = <uif-icon uif-type="{{controller.selectedIcon}}" />
+      Rendered icon = <uif-icon uif-type="{{controller.selectedIcon}}"></uif-icon>
     </div>
   </div>
 
