--- a/src/components/contextualmenu/demoBasicUsage/index.html
+++ b/src/components/contextualmenu/demoBasicUsage/index.html
@@ -1,3 +1,3 @@
-<uif-contextual-menu uif-is-open="isOpen">
+<uif-contextual-menu uif-is-open="isOpen" uif-close-on-click="false">
 	<uif-contextual-menu-item uif-text="color" uif-click="logColor(color)" ng-repeat="color in colors"></uif-contextual-menu-item>
 </uif-contextual-menu>
